# adx-mcp-server

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  release.json  run_tests.sh  server.json  server.py  smithery.yaml
.devcontainer/: devcontainer.json
.devcontainer/features/adx-mcp-server/: devcontainer-feature.json  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml  tests.yml  trivy-scan.yml
devcontainer-feature/adx-mcp-server/: README.md  devcontainer-feature.json  install.sh
docs/: testing.md
src/adx-mcp-server/: main.py
src/adx_mcp_server/: __init__.py  main.py  server.py
tests/: README.md  conftest.py  test_all_tools.py  test_config.py  test_dockerfile.py  test_error_handling.py  test_main.py  test_mock_data.py  test_result_formatting.py  test_server.py  test_server_tools.py
tests/integration/: test_mcp_integration.py
