[project]
name = "adx-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Azure Data Explorer - enabling AI assistants to execute KQL queries and explore your data in Azure Data Explorer clusters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pavel Shklovsky", email = "pavel@cloudefined.com"}
]
dependencies = [
    "mcp[cli]", # MCP server with CLI support
    "azure-kusto-data", # Azure Data Explorer client
    "azure-identity", # Azure authentication
    "python-dotenv", # Environment variable loading
    "pyproject-toml>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/pab1it0/adx-mcp-server"
"Bug Tracker" = "https://github.com/pab1it0/adx-mcp-server/issues"
Documentation = "https://github.com/pab1it0/adx-mcp-server#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
adx-mcp-server = "adx-mcp-server.main:run_server"

[tool.setuptools]
packages = ["adx_mcp_server"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src/adx-mcp-server"]
omit = ["*/__pycache__/*", "*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
