[project]
name = "adx_mcp_server"
version = "1.1.0"
description = "MCP server for Azure Data Explorer (ADX/Kusto) integration enabling AI assistants to execute KQL queries and explore databases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "pab1it0" }
]
keywords = ["mcp", "azure", "data-explorer", "kusto", "kql", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.21.0",
    "azure-kusto-data>=4.0.0",
    "azure-identity>=1.12.0",
    "python-dotenv>=1.0.0",
    "pyproject-toml>=0.1.0",
    "fastmcp>=2.11.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.0",
]

[project.scripts]
adx-mcp-server = "adx_mcp_server.main:run_server"

[tool.setuptools]
packages = ["adx_mcp_server"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src/adx_mcp_server"]
omit = ["*/__pycache__/*", "*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.coverage.html]
directory = "htmlcov"